--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: #462E74;
     padding:10px;
-    font-family: 'Poppins', serif;
+    font-family: 'Poppins', Times, serif;
 }
 
 .topper{
