--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
 .topper{
   font-size: 40px;
   width: auto;
+  display: block;
   border-radius: 20px;
   padding: 15px;
   height: 80px;
@@ -18,29 +19,30 @@ body{
 
 .opener{
   font-size: 25px;
-  margin:auto;
+  margin: 10px;
   border-radius: 20px;
-  margin-top: 10px;
   padding: 15px;
   text-align:center;
   float:left;
+  display: flex;
   width:50%;
   background-color: #7F488C;
 }
 
 .center {
-  font-size: 20px;
-  margin:auto;
-  border-radius: 20px;
-  margin-top: 10px;
-  padding: 15px;
+  font-size:25px;
+  margin:15px;
+  border-radius:20px;
+  padding:50px;
   text-align:center;
-  display:flex;
+  float:right;
+  display:block;
+  width:40%;
   background-color:#7F488C;
 }
 
 .inp-box{
-  width: 300px;
+  width: 700px;
   height: 620px;
   margin:auto;
   padding: 15px;
@@ -49,12 +51,13 @@ body{
 }
 
 .quotes{
-  padding:10px;
+  padding:15px;
   margin:auto;
+  font-style:italic;
 }
 
 form {
-  display:block;
+  display:inline-block;
   width: 250px;
   margin-left: 50px;
 }
@@ -68,15 +71,18 @@ form label {
 form input {
   display: inline-block;
   padding:5px;
+  margin:5px;
 }
 
 button {
   color:azure;
   background-color: #070F3A;
+  display:block;
+  margin:10px;
 
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 550px) {
   h2 {
     font-size: 25px;
     }
@@ -86,9 +92,11 @@ button {
   p {
     font-size: 20px;
     }
+  .inp-box {
+    width: 70%;
 }
 
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 800px) {
   h2 {
     font-size: 35px;
     }
@@ -98,4 +106,31 @@ button {
   p {
     font-size: 18px;
     }
+}
+
+@media screen and (max-width: 450px) {
+  h2 {
+    font-size:150%;
+  }
+  h3 {
+    font-size:21px;
+    }
+  p {
+    font-size: 18px;
+    }
+  .inp-box {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  
+  form label {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  }
+
+  form input {
+  padding:15px;
+  margin:15px;
+  }
 }
