--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ button {
     width: 70%;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 700px) {
   h2 {
     font-size: 35px;
     }
@@ -106,6 +106,16 @@ button {
   p {
     font-size: 18px;
     }
+
+ form label {
+  margin-top: 15px;
+  margin-bottom: 10px;
+  }
+
+  form input {
+  padding:10px;
+  margin:10px;
+  }
 }
 
 @media screen and (max-width: 450px) {
